# plotly_phylotree

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
examples/input_strings/: basic_tree.txt  mammals.txt  newick.txt
src/phylotree/: __init__.py  phylotree.py
src/plotly_phylotree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_phylotree.py
