[build-system]
requires = ["setuptools>=57.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plotly_phylotree"
version = "0.0.1"
description = "A package to plot phylogenetic trees with Plotly."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
authors = [
    {name = "voelkerh"}
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

requires-python = ">=3.9"

dependencies = [
    "plotly",
    "biopython",
    "numpy"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "twine>=4.0.2"]

[project.urls]
Repository = "https://github.com/voelkerh/plotly_phylotree"

[tool.setuptools]
packages = ["phylotree"]
package-dir = {"" = "src"}